<?xml version="1.0"?>
<package format="2">
    <name>line_lanes</name>
    <version>0.0.0</version>
    <description>The line_lanes package</description>

    <maintainer email="suraj@todo.todo">suraj</maintainer>


    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>


    <depend>roscpp</depend>
    
    <depend>costmap_2d</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>cv_bridge</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>image_geometry</depend>
    <depend>image_transport</depend>
    <depend>pluginlib</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>

    <export>
        <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
